--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # PostgreSQL
-POSTGRES_USER=harsh
-POSTGRES_PASSWORD=Gayle@333
+POSTGRES_USER=your_username
+POSTGRES_PASSWORD=your_password
 POSTGRES_DB=expense_tracker
-PGADMIN_DEFAULT_EMAIL=harshy18333@gmail.com
-PGADMIN_DEFAULT_PASSWORD=admin
+PGADMIN_DEFAULT_EMAIL=your email
+PGADMIN_DEFAULT_PASSWORD=your password
 
 # Spring Boot
 SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/expense_db
-SPRING_DATASOURCE_USERNAME=harsh
-SPRING_DATASOURCE_PASSWORD=Gayle@333
+SPRING_DATASOURCE_USERNAME=your username
+SPRING_DATASOURCE_PASSWORD=your password
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
 SPRING_PROFILES_ACTIVE=prod
 
