--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=expense_tracker
 spring.datasource.url=jdbc:postgresql://localhost:5432/expense_tracker
-spring.datasource.username=harsh
-spring.datasource.password=Gayle@333
+spring.datasource.username=your username
+spring.datasource.password=your password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-app.jwt.secret=1718333
+app.jwt.secret=your secret key
 app.jwt.expiration=86400000
 
 server.port=8081
